refactor UI and add email and address

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <h1>Address Book</h1>
         <h3>SUBHEADING</h3>
       </div>
-
       <form id="contactForm">
         <div class="formGroup">
           <label for="firstName">Enter First Name</label>
@@ -26,12 +25,20 @@
           <input type="text" id="lastName">
         </div>
         <div class="formGroup">
-
           <label for="phone">Enter Phone Number</label>
           <input type="text" id="phone">
         </div>
+        <div class="formGroup">
+          <label for="email">Enter Email</label>
+          <input type="text" id="email">
+        </div>
+        <div class="formGroup">
+          <label for="address">Enter Address</label>
+          <input type="text" id="address">
+        </div>
         <button type="submit" class="btn btn-info">Create New</button>
       </form>
+
 
     </div>
     <div class="contacts row">
